; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_queue_acquire_reserve.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_queue_acquire_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccp_queue = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ccp_queue_acquire_reserve(%struct.ccp_queue* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ccp_queue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ccp_queue* %0, %struct.ccp_queue** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.ccp_queue*, %struct.ccp_queue** %4, align 8
  %9 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %8, i32 0, i32 0
  %10 = call i32 @mtx_lock(i32* %9)
  %11 = load %struct.ccp_queue*, %struct.ccp_queue** %4, align 8
  %12 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.ccp_queue*, %struct.ccp_queue** %4, align 8
  %15 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load %struct.ccp_queue*, %struct.ccp_queue** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ccp_queue_reserve_space(%struct.ccp_queue* %16, i32 %17, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %3
  %23 = load %struct.ccp_queue*, %struct.ccp_queue** %4, align 8
  %24 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %23, i32 0, i32 0
  %25 = call i32 @mtx_unlock(i32* %24)
  br label %26

26:                                               ; preds = %22, %3
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @ccp_queue_reserve_space(%struct.ccp_queue*, i32, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
